I added the migrations which were causing 31 errors! Now the project works but the security questions thro a database error.

--- a/744Project.Tests/744Project.Tests.csproj
+++ b/744Project.Tests/744Project.Tests.csproj
@@ -104,6 +104,9 @@
       <Name>744Project</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\Debug\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
