--- a/744Project/744Project.csproj
+++ b/744Project/744Project.csproj
@@ -450,6 +450,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\AccountsCreditsViewModel.cs" />
+    <Compile Include="ViewModels\NetworkEntityViewModel.cs" />
     <Compile Include="ViewModels\NetworkViewModel.cs" />
     <Compile Include="ViewModels\NodeConfiguration.cs" />
   </ItemGroup>
@@ -688,6 +689,7 @@
     <Content Include="Views\SecurityQuestions\Details.cshtml" />
     <Content Include="Views\SecurityQuestions\Edit.cshtml" />
     <Content Include="Views\SecurityQuestions\Index.cshtml" />
+    <Content Include="Views\Network\GetNodeInformation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
