Fixed few bugs 1. When a user logs in and his/her username does not exists in the database, now it's handeled and no exception will be thrown. 2. When a user logs in and gets asked for the security answer, there is an option to cancel which will actually log the user out and redirect him/her to the home page. 3. Also for better looks, I added colors for the buttons submit and cancel in the security questions' page. 4. The code has been tested with a local copy of the database and functions well. However, there is a connection issue to the SQL using the VPN service. The exact error when using the VPN to the server's DB is: "error: 26 - Error Locating Server/Instance Specified".

--- a/744Project/744Project.csproj
+++ b/744Project/744Project.csproj
@@ -699,6 +699,7 @@
     <Content Include="Views\SecurityQuestions\Edit.cshtml" />
     <Content Include="Views\SecurityQuestions\Index.cshtml" />
     <Content Include="Views\Network\GetNodeInformation.cshtml" />
+    <Content Include="Views\SecurityQuestions\Cancel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
