Finished Processing Transactions (though it needs to be integrated into the animations and queues that Nan is doing). Right now, once a transaction is sent, I immediately put it in the processingCenterQueue to test the processing of the transaction. From here, if you click on the PC, it will have a list of the transactions listed by id's and if they are clicked they either return success or failure to the console (if you look at inspect)

--- a/744Project/744Project.csproj
+++ b/744Project/744Project.csproj
@@ -462,6 +462,7 @@
     <Compile Include="ViewModels\NetworkEntityViewModel.cs" />
     <Compile Include="ViewModels\NetworkViewModel.cs" />
     <Compile Include="ViewModels\NodeConfiguration.cs" />
+    <Compile Include="ViewModels\TransactionViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="bin\744Project.dll" />
