Can no longer delete an account that has a balance

--- a/744Project/744Project.csproj
+++ b/744Project/744Project.csproj
@@ -625,6 +625,7 @@
     <Content Include="Scripts\cytoscape.js" />
     <Content Include="Scripts\cytoscape.min.js" />
     <Content Include="Scripts\cytoscape-qtip.js" />
+    <Content Include="Scripts\CytoscapeAnimation.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -633,6 +634,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\Objects.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="stock-internet.jpg" />
