Completed Task#73 1. I fixed minor bugs in task#72 occur when trying to connect a relay-to-relay and they are already connected. The result will only update their weight if the connection already exists in the database. 2. Another bug in task#72 for relay-toPC when the connection already exists, the result will only update the wegith. 3. for task#73, the queue limit works as expected for all relays with some restrictions like a limit must be between 1 to 500. 4. Everything was tested in my local environment.

--- a/744Project/744Project.csproj
+++ b/744Project/744Project.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\NetworkController.cs" />
+    <Compile Include="Controllers\QueuesController.cs" />
     <Compile Include="Controllers\RegionsController.cs" />
     <Compile Include="Controllers\RelaysController.cs" />
     <Compile Include="Controllers\RelayToRelayConnectionsController.cs" />
@@ -730,6 +731,7 @@
     <Content Include="Views\Stores\Edit.cshtml" />
     <Content Include="Views\Stores\Index.cshtml" />
     <Content Include="Views\Connections\Create.cshtml" />
+    <Content Include="Views\Queues\Update.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
