Finished Sprint Task# 77 1. I modified the Register page. 2. Users can now register with a username instead of email. 3. I followed Dr. Kasi's validation for username and password with minimum of 6-characters length for username and password. 7. The password validation requires: Uppercase, Lowercase, special character, number, mimimum length of 6-characters. 8. After a user registers, he/she can create the answers for the security questions. 9. The page for creating answers for security questions is hardcoded for the questions since we don't need users to select questions and users have to answer all three questions. 10. Everything has been tested in my local environment and functions as expected.

--- a/744Project/744Project.csproj
+++ b/744Project/744Project.csproj
@@ -476,6 +476,7 @@
     <Compile Include="ViewModels\NetworkEntityViewModel.cs" />
     <Compile Include="ViewModels\NetworkViewModel.cs" />
     <Compile Include="ViewModels\NodeConfiguration.cs" />
+    <Compile Include="ViewModels\QuestionsAnswersViewModel.cs" />
     <Compile Include="ViewModels\RegionsRelaysStoresViewModel.cs" />
     <Compile Include="ViewModels\TransactionViewModel.cs" />
   </ItemGroup>
