Fixed many bugs 1. The list is much longer than I can remember but everything has been fixed and I went beyond the sprint tasks and found some more bugs and enhancements and fixed them. 2. The two sprint tasks for splitting "Modify a connction" have been fixed, but as one functionality. They work perfectly now as one and they will be splitted into two. 3. Everything has been tested and should function as expected. 4. NOTE: after copying the new data into the server's database, the server's website cannot read from the server's database. I would like to try some more things but we will discuss this in our next meeting.

--- a/744Project/Web.config
+++ b/744Project/Web.config
@@ -13,9 +13,9 @@
     <!--<add name="DatbaseModel" connectionString="data source=MURCSP84\MSSQLSERVER01;initial catalog=NetworkDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
    --> 
     <!--The below is the actual connection to the server's database-->
-    <add name="DatabaseConnection" connectionString="data source=MURCSP84\MSSQLSERVER01;initial catalog=NetworkDB;MultipleActiveResultSets=True;App=EntityFramework;user id=sa; password=AbeNanSaleh123" providerName="System.Data.SqlClient" />
+    <!--<add name="DatabaseConnection" connectionString="data source=MURCSP84\MSSQLSERVER01;initial catalog=NetworkDB;MultipleActiveResultSets=True;App=EntityFramework;user id=sa; password=AbeNanSaleh123" providerName="System.Data.SqlClient" />-->
     <!--The below is the connection to Saleh's laptop for testing purposes. Please, leave the below line to make it easier for me to test my code in the future :) -->
-    <!--<add name="DatabaseConnection" connectionString="data source=R14\SALEH;initial catalog=NetworkDB;Trusted_Connection=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+    <add name="DatabaseConnection" connectionString="data source=R14\SALEH;initial catalog=NetworkDB;Trusted_Connection=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
        <!--<add name="MasterModel" connectionString="data source=MURCSP84\MSSQLSERVER01;initial catalog=NetworkDB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework;user id=sa; password=AbeNanSaleh123" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
