--- a/744Project/744Project.csproj
+++ b/744Project/744Project.csproj
@@ -438,6 +438,10 @@
     <Compile Include="Migrations\201803261826061_added DB_changes.Designer.cs">
       <DependentUpon>201803261826061_added DB_changes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804180431431_editedAccountsAndcreditCards.cs" />
+    <Compile Include="Migrations\201804180431431_editedAccountsAndcreditCards.Designer.cs">
+      <DependentUpon>201804180431431_editedAccountsAndcreditCards.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -901,6 +905,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201803261826061_added DB_changes.resx">
       <DependentUpon>201803261826061_added DB_changes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804180431431_editedAccountsAndcreditCards.resx">
+      <DependentUpon>201804180431431_editedAccountsAndcreditCards.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="obj\Debug\_744Project.Migrations.addmiddlename.resources" />
     <EmbeddedResource Include="obj\Debug\_744Project.Migrations.initialcreate.resources" />
